--- a/.github/workflows/bb.yml
+++ b/.github/workflows/bb.yml
@@ -76,6 +76,6 @@ jobs:
       - name: test_ci
         uses: BuildBearLabs/buildbear_x_action@0b837ff37a35acc6f70d07faa59d5cf6c913397c
         with:
-          buildbear-api-key: "2c4a6a01-eb1a-46cd-8df8-6953c343728b"
+          buildbear-api-key: "48de24b5-acf3-4153-b43f-36be0755679f"
         env:
-          BUILDBEAR_BASE_URL: "https://api.buildbear.io/v1"
+          BUILDBEAR_BASE_URL: "https://api.buildbear.io"
